[package]
name = "swe-edge-ingress-grpc-auth-bearer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "JWT bearer GrpcIngressInterceptor — validates incoming Bearer tokens and surfaces the verified subject"
keywords = ["grpc", "jwt", "bearer", "auth", "interceptor"]
categories = ["network-programming", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
swe-edge-ingress-grpc = { package = "swe-edge-ingress-grpc-transport", path = "../transport" }
thiserror    = "2"
serde        = { version = "1.0", features = ["derive"] }
tracing      = { version = "0.1", default-features = false }
jsonwebtoken = "9"
subtle       = "2"
swe-edge-configbuilder = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.4.4" }

[dev-dependencies]
tokio   = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3"
toml    = "0.8"
subtle  = "2"

[[test]]
name = "jwt_claims_int_test"
path = "test/jwt_claims_int_test.rs"

[[test]]
name = "bearer_ingress_int_test"
path = "test/bearer_ingress_int_test.rs"

[[test]]
name = "bearer_auth_config_int_test"
path = "test/bearer_auth_config_int_test.rs"

[[test]]
name = "bearer_auth_error_int_test"
path = "test/bearer_auth_error_int_test.rs"

[[test]]
name = "metadata_keys_int_test"
path = "test/metadata_keys_int_test.rs"

[[test]]
name = "processor_int_test"
path = "test/processor_int_test.rs"

[[test]]
name = "bearer_ingress_config_int_test"
path = "test/bearer_ingress_config_int_test.rs"

[[test]]
name = "bearer_ingress_interceptor_int_test"
path = "test/bearer_ingress_interceptor_int_test.rs"

[[test]]
name = "bearer_secret_int_test"
path = "test/bearer_secret_int_test.rs"

[[test]]
name = "traits_int_test"
path = "test/traits_int_test.rs"

[[test]]
name = "futures_coverage_int_test"
path = "test/futures_coverage_int_test.rs"

[[test]]
name = "subtle_coverage_int_test"
path = "test/subtle_coverage_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "test/application_config_builder_int_test.rs"

[[test]]
name = "validator_int_test"
path = "test/validator_int_test.rs"

[[test]]
name = "bearer_svc_int_test"
path = "test/bearer_svc_int_test.rs"

[[test]]
name = "jwt_claims_builder_contract_int_test"
path = "test/jwt_claims_builder_contract_int_test.rs"

[[test]]
name = "claims_builder_int_test"
path = "test/claims_builder_int_test.rs"
