[package]
name = "swe-edge-ingress-grpc-auth-mtls"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "mTLS-based GrpcInboundInterceptor — rejects calls when no peer identity is present in GrpcMetadata"
keywords = ["grpc", "mtls", "auth", "interceptor", "swe"]
categories = ["network-programming", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
swe-edge-ingress-grpc.workspace = true
thiserror   = { workspace = true }
futures     = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
