[package]
name = "swe-edge-ingress-grpc-auth-mtls"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "mTLS-based GrpcIngressInterceptor — rejects calls when no peer identity is present in GrpcMetadata"
keywords = ["grpc", "mtls", "auth", "interceptor", "swe"]
categories = ["network-programming", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
swe-edge-ingress-grpc = { package = "swe-edge-ingress-grpc-transport", path = "../transport" }
thiserror   = "2"
serde       = { version = "1.0", features = ["derive"] }
toml        = "0.8"
tracing     = { version = "0.1", default-features = false }
swe-edge-configbuilder = { path = "../../../../../configbuilder/main/features/configbuilder" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
