[package]
name = "swe-edge-ingress-grpc-authz"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Authorization GrpcIngressInterceptor — runs a pluggable AuthzPolicy on identity carried in GrpcMetadata"
keywords = ["grpc", "authz", "rbac", "interceptor", "swe"]
categories = ["network-programming", "authentication"]

[package.metadata.struct-engine]
application_type = "lib"
service_type = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
swe-edge-ingress-grpc = { path = "../transport", package = "swe-edge-ingress-grpc-transport" }
thiserror   = "2"
serde       = { version = "1.0", features = ["derive"] }
toml        = "0.8"
tracing     = { version = "0.1", default-features = false }
swe-edge-configbuilder = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
