[package]
name         = "swe-edge-ingress-grpc-reflection"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "swe-edge ingress — gRPC reflection (grpc.reflection.v1alpha.ServerReflection) for grpcurl/evans"
keywords     = ["grpc", "reflection", "grpcurl", "edge", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
thiserror    = "2"
futures      = "0.3"
parking_lot  = "0.12"
tracing      = { version = "0.1", default-features = false }

# Cross-workspace path dep on the inbound port + dispatcher.
swe-edge-ingress-grpc = { path = "../transport", package = "swe-edge-ingress-grpc-transport" }
edge-domain = { workspace = true }
swe-edge-configbuilder = { workspace = true }

[dev-dependencies]
async-trait    = "0.1"
serde_json     = "1.0"
tokio          = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
bytes          = "1"
tracing        = { version = "0.1", default-features = false }
http           = "1"
http-body-util = "0.1"
hyper          = { version = "1", features = ["http2", "client", "server"] }
hyper-util     = { version = "0.1", features = ["tokio"] }
swe-edge-ingress-grpc = { path = "../transport", package = "swe-edge-ingress-grpc-transport" }
edge-domain = { workspace = true }

[lints]
workspace = true

