[package]
name         = "swe-edge-ingress-grpc-transport"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "swe-edge ingress — gRPC inbound domain (value objects + GrpcInbound port)"
keywords     = ["grpc", "inbound", "edge", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "transport"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace          = true
thiserror.workspace      = true
async-trait.workspace    = true
futures.workspace        = true
tokio.workspace          = true
tokio-util               = { version = "0.7", default-features = false }
parking_lot.workspace    = true
bytes.workspace          = true
tracing.workspace        = true
tonic.workspace          = true
http-body-util.workspace = true
http                     = "1"
http-body               = "1"
hyper                    = { version = "1", features = ["http2", "server"] }
hyper-util               = { version = "0.1", features = ["tokio"] }

swe-edge-ingress-tls.workspace  = true
edge-domain.workspace           = true
swe-observ-metrics.workspace    = true
swe_justobserv_context.workspace = true
sha2                     = "0.10"

[dev-dependencies]
tokio        = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
hyper        = { version = "1", features = ["http2", "client"] }
bytes        = { workspace = true }
serde_json   = { workspace = true }
rcgen           = "0.13"
rustls          = { version = "0.23", features = ["ring"] }
rustls-pemfile  = "2"
tokio-rustls    = "0.26"
tempfile        = "3"
async-trait.workspace  = true
tokio-util             = { version = "0.7", default-features = false }
swe-observ-metrics.workspace = true
edge-domain.workspace  = true
tonic.workspace        = true
sha2                   = "0.10"
swe-edge-ingress-tls.workspace = true

[[test]]
name    = "grpc_authz_audit_int_test"
path    = "tests/grpc_authz_audit_int_test.rs"

[[test]]
name    = "grpc_handler_adapter_int_test"
path    = "tests/grpc_handler_adapter_int_test.rs"

[[test]]
name    = "grpc_health_v1_int_test"
path    = "tests/grpc_health_v1_int_test.rs"

[[test]]
name    = "grpc_inbound_int_test"
path    = "tests/grpc_inbound_int_test.rs"

[[test]]
name    = "grpc_message_size_int_test"
path    = "tests/grpc_message_size_int_test.rs"

[[test]]
name    = "grpc_mtls_identity_int_test"
path    = "tests/grpc_mtls_identity_int_test.rs"

[[test]]
name    = "grpc_server_config_int_test"
path    = "tests/grpc_server_config_int_test.rs"

[[test]]
name    = "tonic_grpc_server_int_test"
path    = "tests/tonic_grpc_server_int_test.rs"

[[test]]
name    = "tonic_grpc_server_tls_int_test"
path    = "tests/tonic_grpc_server_tls_int_test.rs"

[[test]]
name    = "validator_int_test"
path    = "tests/validator_int_test.rs"

[[test]]
name    = "dependency_coverage_int_test"
path    = "tests/dependency_coverage_int_test.rs"

[lints]
workspace = true
