[package]
name         = "swe-edge-ingress-grpc-transport"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "swe-edge ingress — gRPC inbound domain (value objects + GrpcIngress port)"
keywords     = ["grpc", "inbound", "edge", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "transport"

[lib]
path = "src/lib.rs"

[dependencies]
serde          = { version = "1.0", features = ["derive"] }
thiserror      = "2"
async-trait    = "0.1"
futures        = "0.3"
tokio          = { version = "1.0", features = ["rt-multi-thread", "rt", "sync", "macros", "time"] }
tokio-util     = { version = "0.7", default-features = false }
parking_lot    = "0.12"
bytes          = "1"
tracing        = { version = "0.1", default-features = false }
tonic          = { version = "0.12", default-features = false, features = ["transport"] }
http-body-util = "0.1"
http           = "1"
http-body      = "1"
hyper          = { version = "1", features = ["http2", "server"] }
hyper-util     = { version = "0.1", features = ["tokio"] }

swe-edge-ingress-tls   = { path = "../../../../tls" }
edge-domain            = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.3.4" }
swe-observ-metrics     = { package = "swe_justobserv_metrics", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
swe_justobserv_context = { git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
sha2                   = "0.10"
swe-edge-configbuilder = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.4.2" }

[dev-dependencies]
tokio          = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
hyper          = { version = "1", features = ["http2", "client"] }
bytes          = "1"
serde_json     = "1.0"
rcgen          = "0.13"
rustls         = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls   = "0.26"
tempfile       = "3"
async-trait    = "0.1"
tokio-util     = { version = "0.7", default-features = false }
swe-observ-metrics     = { package = "swe_justobserv_metrics", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
edge-domain    = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.3.4" }
tonic          = { version = "0.12", default-features = false, features = ["transport"] }
sha2           = "0.10"
swe-edge-ingress-tls = { path = "../../../../tls" }

[[test]]
name    = "grpc_authz_audit_int_test"
path    = "test/grpc_authz_audit_int_test.rs"

[[test]]
name    = "grpc_handler_adapter_int_test"
path    = "test/grpc_handler_adapter_int_test.rs"

[[test]]
name    = "grpc_health_v1_int_test"
path    = "test/grpc_health_v1_int_test.rs"

[[test]]
name    = "grpc_ingress_int_test"
path    = "test/grpc_ingress_int_test.rs"

[[test]]
name    = "grpc_message_size_int_test"
path    = "test/grpc_message_size_int_test.rs"

[[test]]
name    = "grpc_mtls_identity_int_test"
path    = "test/grpc_mtls_identity_int_test.rs"

[[test]]
name    = "grpc_server_config_int_test"
path    = "test/grpc_server_config_int_test.rs"

[[test]]
name    = "tonic_grpc_server_int_test"
path    = "test/tonic_grpc_server_int_test.rs"

[[test]]
name    = "tonic_grpc_server_tls_int_test"
path    = "test/tonic_grpc_server_tls_int_test.rs"

[[test]]
name    = "validator_int_test"
path    = "test/validator_int_test.rs"

[[test]]
name    = "dependency_coverage_int_test"
path    = "test/dependency_coverage_int_test.rs"

[[test]]
name    = "health_service_int_test"
path    = "test/health_service_int_test.rs"

[lints]
workspace = true
