[package]
name         = "swe-edge-ingress-grpc-verifier"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "gRPC interceptor that enforces JWT/API-key authentication on inbound calls."
keywords     = ["auth", "jwt", "grpc", "interceptor", "edge"]
categories   = ["authentication", "network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "processor"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"
tracing   = { version = "0.1", default-features = false }

swe-edge-ingress-verifier       = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.8.0-rc.2" }
swe-edge-ingress-grpc-transport = { path = "../transport" }
swe-edge-configbuilder = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.8.0-rc.2" }

[dev-dependencies]
tokio      = { version = "1.0", features = ["rt", "macros"] }
serde_json = "1.0"

[lints]
workspace = true

