[package]
name         = "swe-edge-ingress-http-transport"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "swe-edge ingress — HTTP inbound domain (value objects + HttpIngress port)"
keywords     = ["http", "inbound", "edge", "swe"]
categories   = ["web-programming", "network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "transport"

[lib]
name = "swe_edge_ingress_http"
path = "src/lib.rs"

[[test]]
name    = "axum_stream_int_test"
path    = "tests/axum_stream_int_test.rs"

[[test]]
name    = "axum_server_int_test"
path    = "tests/axum_server_int_test.rs"

[[test]]
name    = "axum_server_tls_int_test"
path    = "tests/axum_server_tls_int_test.rs"

[[test]]
name    = "http_ingress_int_test"
path    = "tests/http_ingress_int_test.rs"

[[test]]
name    = "axum_int_test"
path    = "tests/axum_int_test.rs"

[[test]]
name    = "edge_domain_int_test"
path    = "tests/edge_domain_int_test.rs"

[[test]]
name    = "http_int_test"
path    = "tests/http_int_test.rs"

[[test]]
name    = "hyper_util_int_test"
path    = "tests/hyper_util_int_test.rs"

[[test]]
name    = "swe_edge_ingress_tls_int_test"
path    = "tests/swe_edge_ingress_tls_int_test.rs"

[[test]]
name    = "swe_edge_ingress_verifier_int_test"
path    = "tests/swe_edge_ingress_verifier_int_test.rs"

[[test]]
name    = "swe_observ_metrics_int_test"
path    = "tests/swe_observ_metrics_int_test.rs"

[[test]]
name    = "validator_int_test"
path    = "tests/validator_int_test.rs"

[dependencies]
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
thiserror      = "2"
async-trait    = "0.1"
futures        = "0.3"
tokio          = { version = "1.0", features = ["rt-multi-thread", "rt", "sync", "macros", "time"] }
axum           = { version = "0.8", features = ["ws"] }
bytes          = "1"
tracing        = { version = "0.1", default-features = false }

swe-edge-ingress-tls      = { path = "../../../../tls" }
swe-edge-ingress-verifier = { path = "../../../../verifier" }
edge-domain               = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.3.4" }
swe-edge-configbuilder    = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.4.2" }
swe-observ-metrics        = { package = "swe_justobserv_metrics", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
swe_justobserv_context    = { git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
matchit       = "0.8"
parking_lot   = "0.12"
hyper         = { version = "1", features = ["http1", "http2"] }
hyper-util    = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
http          = "1"

[dev-dependencies]
tokio        = { version = "1.0", features = ["rt-multi-thread", "macros"] }
reqwest      = { version = "0.12", features = ["json"], default-features = false }
rcgen        = "0.13"
rustls       = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
tempfile     = "3"
async-trait  = "0.1"
edge-domain  = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.3.4" }
hyper-util   = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
swe-edge-ingress-tls      = { path = "../../../../tls" }
swe-edge-ingress-verifier = { path = "../../../../verifier" }
swe-observ-metrics        = { package = "swe_justobserv_metrics", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
http         = "1"

[lints]
workspace = true
