[package]
name         = "swe-edge-ingress-http-transport"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "swe-edge ingress — HTTP inbound domain (value objects + HttpIngress port)"
keywords     = ["http", "inbound", "edge", "swe"]
categories   = ["web-programming", "network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "transport"

[lib]
name = "swe_edge_ingress_http"
path = "src/lib.rs"

[[test]]
name    = "axum_stream_int_test"
path    = "tests/axum_stream_int_test.rs"

[[test]]
name    = "axum_server_int_test"
path    = "tests/axum_server_int_test.rs"

[[test]]
name    = "axum_server_tls_int_test"
path    = "tests/axum_server_tls_int_test.rs"

[[test]]
name    = "http_ingress_int_test"
path    = "tests/http_ingress_int_test.rs"

[[test]]
name    = "axum_int_test"
path    = "tests/axum_int_test.rs"

[[test]]
name    = "edge_domain_int_test"
path    = "tests/edge_domain_int_test.rs"

[[test]]
name    = "http_int_test"
path    = "tests/http_int_test.rs"

[[test]]
name    = "hyper_util_int_test"
path    = "tests/hyper_util_int_test.rs"

[[test]]
name    = "swe_edge_ingress_tls_int_test"
path    = "tests/swe_edge_ingress_tls_int_test.rs"

[[test]]
name    = "swe_edge_ingress_verifier_int_test"
path    = "tests/swe_edge_ingress_verifier_int_test.rs"

[[test]]
name    = "swe_observ_metrics_int_test"
path    = "tests/swe_observ_metrics_int_test.rs"

[[test]]
name    = "validator_int_test"
path    = "tests/validator_int_test.rs"

[[test]]
name    = "spi_int_test"
path    = "tests/spi_int_test.rs"

[[test]]
name    = "spi_security_test"
path    = "tests/spi_security_int_test.rs"

[[test]]
name    = "saf_transport_e2e_test"
path    = "tests/saf_transport_e2e_int_test.rs"

[[test]]
name    = "http_dispatcher_error_test"
path    = "tests/http_dispatcher_error_int_test.rs"

[[test]]
name    = "http_handler_adapter_test"
path    = "tests/http_handler_adapter_int_test.rs"

[[test]]
name    = "http_handler_registry_dispatcher_test"
path    = "tests/http_handler_registry_dispatcher_int_test.rs"

[[test]]
name    = "http_health_check_test"
path    = "tests/http_health_check_int_test.rs"

[[test]]
name    = "http_ingress_error_test"
path    = "tests/http_ingress_error_int_test.rs"

[[test]]
name    = "axum_http_server_test"
path    = "tests/axum_http_server_int_test.rs"

[[test]]
name    = "axum_http_server_builder_test"
path    = "tests/axum_http_server_builder_int_test.rs"

[[test]]
name    = "axum_server_error_test"
path    = "tests/axum_server_error_int_test.rs"

[[test]]
name    = "http_config_validator_test"
path    = "tests/http_config_validator_int_test.rs"

[[test]]
name    = "form_part_test"
path    = "tests/form_part_int_test.rs"

[[test]]
name    = "http_config_test"
path    = "tests/http_config_int_test.rs"

[[test]]
name    = "http_config_builder_test"
path    = "tests/http_config_builder_int_test.rs"

[[test]]
name    = "http_request_test"
path    = "tests/http_request_int_test.rs"

[[test]]
name    = "http_request_builder_test"
path    = "tests/http_request_builder_int_test.rs"

[[test]]
name    = "http_response_test"
path    = "tests/http_response_int_test.rs"

[[test]]
name    = "sse_event_test"
path    = "tests/sse_event_int_test.rs"

[[test]]
name    = "ws_channel_test"
path    = "tests/ws_channel_int_test.rs"

[[test]]
name    = "ws_message_test"
path    = "tests/ws_message_int_test.rs"

[dependencies]
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
thiserror      = "2"
async-trait    = "0.1"
futures        = "0.3"
tokio          = { version = "1.0", features = ["rt-multi-thread", "rt", "sync", "macros", "time"] }
axum           = { version = "0.8", features = ["ws"] }
bytes          = "1"
tracing        = { version = "0.1", default-features = false }

swe-edge-ingress-tls      = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.7.1" }
swe-edge-ingress-verifier = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.7.1" }
edge-domain               = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.7.1" }
swe-edge-configbuilder    = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.7.1" }
swe-observ-metrics        = { package = "swe_justobserv_metrics", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
swe_justobserv_context    = { git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
matchit       = "0.8"
parking_lot   = "0.12"
hyper         = { version = "1", features = ["http1", "http2"] }
hyper-util    = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
http          = "1"

[dev-dependencies]
tokio        = { version = "1.0", features = ["rt-multi-thread", "macros"] }
reqwest      = { version = "0.12", features = ["json"], default-features = false }
rcgen        = "0.13"
rustls       = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
tempfile     = "3"
async-trait  = "0.1"
edge-domain               = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.7.1" }
hyper-util   = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
swe-edge-ingress-tls      = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.7.1" }
swe-edge-ingress-verifier = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.7.1" }
swe-observ-metrics        = { package = "swe_justobserv_metrics", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
http         = "1"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "http_transport_config_section_int_test"
path = "tests/http_transport_config_section_int_test.rs"

[[test]]
name = "transport_svc_int_test"
path = "tests/transport_svc_int_test.rs"

[[test]]
name = "axum_http_server_helper_int_test"
path = "tests/axum_http_server_helper_int_test.rs"

[[test]]
name = "http_encode_fn_int_test"
path = "tests/http_encode_fn_int_test.rs"

[[test]]
name = "registry_dispatcher_impl_int_test"
path = "tests/registry_dispatcher_impl_int_test.rs"

[[test]]
name = "http_config_validator_contract_int_test"
path = "tests/http_config_validator_contract_int_test.rs"

[[test]]
name = "http_stream_int_test"
path = "tests/http_stream_int_test.rs"

[[test]]
name = "http_body_int_test"
path = "tests/http_body_int_test.rs"

[[test]]
name = "http_ingress_result_int_test"
path = "tests/http_ingress_result_int_test.rs"

[[test]]
name = "http_decode_fn_int_test"
path = "tests/http_decode_fn_int_test.rs"

[[test]]
name = "http_config_validator_port_int_test"
path = "tests/http_config_validator_port_int_test.rs"

[[test]]
name = "http_auth_int_test"
path = "tests/http_auth_int_test.rs"

[[test]]
name = "http_method_int_test"
path = "tests/http_method_int_test.rs"

[[test]]
name = "sse_stream_int_test"
path = "tests/sse_stream_int_test.rs"

[[test]]
name = "ws_receiver_int_test"
path = "tests/ws_receiver_int_test.rs"

[[test]]
name = "ws_sender_int_test"
path = "tests/ws_sender_int_test.rs"
