[package]
name         = "swe-edge-ingress-http-verifier"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "HTTP tower/axum layer that enforces JWT and API-key auth on inbound requests."
keywords     = ["auth", "jwt", "tower", "axum", "edge"]
categories   = ["authentication", "web-programming"]

[package.metadata.struct-engine]
application_type = "lib"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"
tracing   = { version = "0.1", default-features = false }
axum      = "0.8"
bytes     = "1"
http      = "1"
tower     = { version = "0.5", features = ["util"] }

swe-edge-ingress-verifier  = { path = "../../../../verifier" }
edge-domain                = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.3.4" }
swe-edge-configbuilder     = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.4.2" }

[dev-dependencies]
tokio      = { version = "1.0", features = ["rt-multi-thread", "macros"] }
axum       = "0.8"
serde_json = "1.0"

[lints]
workspace = true
