[package]
name         = "swe-edge-ingress-http-verifier"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "HTTP tower/axum layer that enforces JWT and API-key auth on inbound requests."
keywords     = ["auth", "jwt", "tower", "axum", "edge"]
categories   = ["authentication", "web-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "processor"

[lib]
path = "src/lib.rs"

[[test]]
name    = "saf_verifier_e2e_test"
path    = "tests/saf_verifier_e2e_int_test.rs"

[[test]]
name    = "spi_int_test"
path    = "tests/spi_int_int_test.rs"

[[test]]
name    = "spi_security_test"
path    = "tests/spi_security_int_test.rs"

[[test]]
name    = "auth_error_test"
path    = "tests/auth_error_int_test.rs"

[[test]]
name    = "bearer_layer_test"
path    = "tests/bearer_layer_int_test.rs"

[[test]]
name    = "bearer_service_test"
path    = "tests/bearer_service_int_test.rs"

[[test]]
name    = "verified_claims_test"
path    = "tests/verified_claims_int_test.rs"

[dependencies]
thiserror = "2"
tracing   = { version = "0.1", default-features = false }
axum      = "0.8"
http      = "1"
tower     = { version = "0.5", features = ["util"] }

swe-edge-ingress-verifier = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.7.1" }
edge-domain               = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.7.1" }
swe-edge-configbuilder    = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", tag = "v0.7.1" }

[dev-dependencies]
tokio      = { version = "1.0", features = ["rt-multi-thread", "macros"] }
axum       = "0.8"
serde_json = "1.0"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "http_auth_error_int_test"
path = "tests/http_auth_error_int_test.rs"
[[test]]
name = "verifier_svc_int_test"
path = "tests/verifier_svc_int_test.rs"

[[test]]
name = "processor_int_test"
path = "tests/processor_int_test.rs"
[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"
[[test]]
name = "verifier_error_int_test"
path = "tests/verifier_error_int_test.rs"
[[test]]
name = "axum_dep_int_test"
path = "tests/axum_dep_int_test.rs"
[[test]]
name = "edge_domain_dep_int_test"
path = "tests/edge_domain_dep_int_test.rs"

[[test]]
name = "ingress_verifier_dep_int_test"
path = "tests/ingress_verifier_dep_int_test.rs"
[[test]]
name = "tower_dep_int_test"
path = "tests/tower_dep_int_test.rs"
[[test]]
name = "bearer_service_helper_int_test"
path = "tests/bearer_service_helper_int_test.rs"

[[test]]
name = "verifier_processor_int_test"
path = "tests/verifier_processor_int_test.rs"
